internal/grammars/walker/tronwalker_parser.go
// Code generated from TronWalker.g4 by ANTLR 4.7.1. DO NOT EDIT.

package walker // TronWalker
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/wxio/goantlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "", "'syntax'", "", "", "", "", "", "'{'", "'}'", "", "'\"'", "'''",
	"", "':'", "'('", "')'", "'.'", "'['", "']'", "','", "'<'", "'>'", "'-'",
	"'+'",
}
var symbolicNames = []string{
	"", "PROTO3", "SYNTAX", "EQ_PRE", "ENDPRE", "PRE_WS", "PRE_COMMENT", "PRE_LINE_COMMENT",
	"LCUR", "RCUR", "EQ", "DQ", "SQ", "SEMI", "COLON", "LPAREN", "RPAREN",
	"DOT", "LSB", "RSB", "COMMA", "LCHEVR", "RCHEVR", "DASH", "PLUS", "STR",
	"ID", "INT", "FLT", "WS", "COMMENT", "LINE_COMMENT", "DOWN", "UP", "ROOT",
	"ERROR", "Import", "Package", "Option", "Extend", "Message", "Enum", "Service",
	"Oneof", "Map", "Field", "Datastructure", "Reserved", "Rpc", "Keytype",
	"EnumValue", "EnumNum", "INF", "NAN", "MAX", "WEAK", "PUBLIC", "Returns",
	"Stream", "To", "TRUE", "FALSE",
}

var ruleNames = []string{
	"proto", "syntax", "tld", "msgBody", "oneofBody", "enumBody", "svcBody",
	"extendBody",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type TronWalker struct {
	*antlr.BaseParser
}

func NewTronWalker(input antlr.TokenStream) *TronWalker {
	this := new(TronWalker)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "TronWalker.g4"

	return this
}

// TronWalker tokens.
const (
	TronWalkerEOF              = antlr.TokenEOF
	TronWalkerPROTO3           = 1
	TronWalkerSYNTAX           = 2
	TronWalkerEQ_PRE           = 3
	TronWalkerENDPRE           = 4
	TronWalkerPRE_WS           = 5
	TronWalkerPRE_COMMENT      = 6
	TronWalkerPRE_LINE_COMMENT = 7
	TronWalkerLCUR             = 8
	TronWalkerRCUR             = 9
	TronWalkerEQ               = 10
	TronWalkerDQ               = 11
	TronWalkerSQ               = 12
	TronWalkerSEMI             = 13
	TronWalkerCOLON            = 14
	TronWalkerLPAREN           = 15
	TronWalkerRPAREN           = 16
	TronWalkerDOT              = 17
	TronWalkerLSB              = 18
	TronWalkerRSB              = 19
	TronWalkerCOMMA            = 20
	TronWalkerLCHEVR           = 21
	TronWalkerRCHEVR           = 22
	TronWalkerDASH             = 23
	TronWalkerPLUS             = 24
	TronWalkerSTR              = 25
	TronWalkerID               = 26
	TronWalkerINT              = 27
	TronWalkerFLT              = 28
	TronWalkerWS               = 29
	TronWalkerCOMMENT          = 30
	TronWalkerLINE_COMMENT     = 31
	TronWalkerDOWN             = 32
	TronWalkerUP               = 33
	TronWalkerROOT             = 34
	TronWalkerERROR            = 35
	TronWalkerImport           = 36
	TronWalkerPackage          = 37
	TronWalkerOption           = 38
	TronWalkerExtend           = 39
	TronWalkerMessage          = 40
	TronWalkerEnum             = 41
	TronWalkerService          = 42
	TronWalkerOneof            = 43
	TronWalkerMap              = 44
	TronWalkerField            = 45
	TronWalkerDatastructure    = 46
	TronWalkerReserved         = 47
	TronWalkerRpc              = 48
	TronWalkerKeytype          = 49
	TronWalkerEnumValue        = 50
	TronWalkerEnumNum          = 51
	TronWalkerINF              = 52
	TronWalkerNAN              = 53
	TronWalkerMAX              = 54
	TronWalkerWEAK             = 55
	TronWalkerPUBLIC           = 56
	TronWalkerReturns          = 57
	TronWalkerStream           = 58
	TronWalkerTo               = 59
	TronWalkerTRUE             = 60
	TronWalkerFALSE            = 61
)

// TronWalker rules.
const (
	TronWalkerRULE_proto      = 0
	TronWalkerRULE_syntax     = 1
	TronWalkerRULE_tld        = 2
	TronWalkerRULE_msgBody    = 3
	TronWalkerRULE_oneofBody  = 4
	TronWalkerRULE_enumBody   = 5
	TronWalkerRULE_svcBody    = 6
	TronWalkerRULE_extendBody = 7
)

// IProtoContext is an interface to support dynamic dispatch.
type IProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsProtoContext differentiates from other interfaces.
	IsProtoContext()
}

type ProtoContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProtoContext() *ProtoContext {
	var p = new(ProtoContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronWalkerRULE_proto
	return p
}

func (*ProtoContext) IsProtoContext() {}

func NewProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProtoContext {
	var p = new(ProtoContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronWalkerRULE_proto

	return p
}

func (s *ProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *ProtoContext) AllDOWN() []antlr.TerminalNode {
	return s.GetTokens(TronWalkerDOWN)
}

func (s *ProtoContext) DOWN(i int) antlr.TerminalNode {
	return s.GetToken(TronWalkerDOWN, i)
}

func (s *ProtoContext) ROOT() antlr.TerminalNode {
	return s.GetToken(TronWalkerROOT, 0)
}

func (s *ProtoContext) AllUP() []antlr.TerminalNode {
	return s.GetTokens(TronWalkerUP)
}

func (s *ProtoContext) UP(i int) antlr.TerminalNode {
	return s.GetToken(TronWalkerUP, i)
}

func (s *ProtoContext) EOF() antlr.TerminalNode {
	return s.GetToken(TronWalkerEOF, 0)
}

func (s *ProtoContext) Syntax() ISyntaxContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISyntaxContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ISyntaxContext)
}

func (s *ProtoContext) AllTld() []ITldContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITldContext)(nil)).Elem())
	var tst = make([]ITldContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITldContext)
		}
	}

	return tst
}

func (s *ProtoContext) Tld(i int) ITldContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITldContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITldContext)
}

func (s *ProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProtoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterProto(s)
	}
}

func (s *ProtoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitProto(s)
	}
}

func (p *TronWalker) Proto() (localctx IProtoContext) {
	localctx = NewProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TronWalkerRULE_proto)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(16)
		p.Match(TronWalkerDOWN)
	}
	{
		p.SetState(17)
		p.Match(TronWalkerROOT)
	}
	p.SetState(19)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TronWalkerSYNTAX {
		{
			p.SetState(18)
			p.Syntax()
		}

	}
	p.SetState(29)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == TronWalkerDOWN {
		{
			p.SetState(21)
			p.Match(TronWalkerDOWN)
		}
		p.SetState(25)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for ((_la-36)&-(0x1f+1)) == 0 && ((1<<uint((_la-36)))&((1<<(TronWalkerImport-36))|(1<<(TronWalkerPackage-36))|(1<<(TronWalkerExtend-36))|(1<<(TronWalkerMessage-36))|(1<<(TronWalkerEnum-36))|(1<<(TronWalkerService-36)))) != 0 {
			{
				p.SetState(22)
				p.Tld()
			}

			p.SetState(27)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(28)
			p.Match(TronWalkerUP)
		}

	}
	{
		p.SetState(31)
		p.Match(TronWalkerUP)
	}
	{
		p.SetState(32)
		p.Match(TronWalkerEOF)
	}

	return localctx
}

// ISyntaxContext is an interface to support dynamic dispatch.
type ISyntaxContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSyntaxContext differentiates from other interfaces.
	IsSyntaxContext()
}

type SyntaxContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySyntaxContext() *SyntaxContext {
	var p = new(SyntaxContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronWalkerRULE_syntax
	return p
}

func (*SyntaxContext) IsSyntaxContext() {}

func NewSyntaxContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SyntaxContext {
	var p = new(SyntaxContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronWalkerRULE_syntax

	return p
}

func (s *SyntaxContext) GetParser() antlr.Parser { return s.parser }

func (s *SyntaxContext) CopyFrom(ctx *SyntaxContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *SyntaxContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type SyntaxNodeContext struct {
	*SyntaxContext
}

func NewSyntaxNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SyntaxNodeContext {
	var p = new(SyntaxNodeContext)

	p.SyntaxContext = NewEmptySyntaxContext()
	p.parser = parser
	p.CopyFrom(ctx.(*SyntaxContext))

	return p
}

func (s *SyntaxNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SyntaxNodeContext) SYNTAX() antlr.TerminalNode {
	return s.GetToken(TronWalkerSYNTAX, 0)
}

func (s *SyntaxNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterSyntaxNode(s)
	}
}

func (s *SyntaxNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitSyntaxNode(s)
	}
}

func (p *TronWalker) Syntax() (localctx ISyntaxContext) {
	localctx = NewSyntaxContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TronWalkerRULE_syntax)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	localctx = NewSyntaxNodeContext(p, localctx)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(34)
		p.Match(TronWalkerSYNTAX)
	}

	return localctx
}

// ITldContext is an interface to support dynamic dispatch.
type ITldContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTldContext differentiates from other interfaces.
	IsTldContext()
}

type TldContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTldContext() *TldContext {
	var p = new(TldContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronWalkerRULE_tld
	return p
}

func (*TldContext) IsTldContext() {}

func NewTldContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TldContext {
	var p = new(TldContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronWalkerRULE_tld

	return p
}

func (s *TldContext) GetParser() antlr.Parser { return s.parser }

func (s *TldContext) CopyFrom(ctx *TldContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *TldContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TldContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type PkgNodeContext struct {
	*TldContext
}

func NewPkgNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *PkgNodeContext {
	var p = new(PkgNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *PkgNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PkgNodeContext) Package() antlr.TerminalNode {
	return s.GetToken(TronWalkerPackage, 0)
}

func (s *PkgNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterPkgNode(s)
	}
}

func (s *PkgNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitPkgNode(s)
	}
}

type ExtNodeContext struct {
	*TldContext
}

func NewExtNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ExtNodeContext {
	var p = new(ExtNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *ExtNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ExtNodeContext) Extend() antlr.TerminalNode {
	return s.GetToken(TronWalkerExtend, 0)
}

func (s *ExtNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(TronWalkerDOWN, 0)
}

func (s *ExtNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(TronWalkerUP, 0)
}

func (s *ExtNodeContext) AllExtendBody() []IExtendBodyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IExtendBodyContext)(nil)).Elem())
	var tst = make([]IExtendBodyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IExtendBodyContext)
		}
	}

	return tst
}

func (s *ExtNodeContext) ExtendBody(i int) IExtendBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IExtendBodyContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IExtendBodyContext)
}

func (s *ExtNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterExtNode(s)
	}
}

func (s *ExtNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitExtNode(s)
	}
}

type EnumNodeContext struct {
	*TldContext
}

func NewEnumNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *EnumNodeContext {
	var p = new(EnumNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *EnumNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *EnumNodeContext) Enum() antlr.TerminalNode {
	return s.GetToken(TronWalkerEnum, 0)
}

func (s *EnumNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(TronWalkerDOWN, 0)
}

func (s *EnumNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(TronWalkerUP, 0)
}

func (s *EnumNodeContext) AllEnumBody() []IEnumBodyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEnumBodyContext)(nil)).Elem())
	var tst = make([]IEnumBodyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEnumBodyContext)
		}
	}

	return tst
}

func (s *EnumNodeContext) EnumBody(i int) IEnumBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEnumBodyContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEnumBodyContext)
}

func (s *EnumNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterEnumNode(s)
	}
}

func (s *EnumNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitEnumNode(s)
	}
}

type ImportNodeContext struct {
	*TldContext
}

func NewImportNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *ImportNodeContext {
	var p = new(ImportNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *ImportNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportNodeContext) Import() antlr.TerminalNode {
	return s.GetToken(TronWalkerImport, 0)
}

func (s *ImportNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterImportNode(s)
	}
}

func (s *ImportNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitImportNode(s)
	}
}

type SvcNodeContext struct {
	*TldContext
}

func NewSvcNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *SvcNodeContext {
	var p = new(SvcNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *SvcNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SvcNodeContext) Service() antlr.TerminalNode {
	return s.GetToken(TronWalkerService, 0)
}

func (s *SvcNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(TronWalkerDOWN, 0)
}

func (s *SvcNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(TronWalkerUP, 0)
}

func (s *SvcNodeContext) AllSvcBody() []ISvcBodyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ISvcBodyContext)(nil)).Elem())
	var tst = make([]ISvcBodyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ISvcBodyContext)
		}
	}

	return tst
}

func (s *SvcNodeContext) SvcBody(i int) ISvcBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ISvcBodyContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ISvcBodyContext)
}

func (s *SvcNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterSvcNode(s)
	}
}

func (s *SvcNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitSvcNode(s)
	}
}

type MsgNodeContext struct {
	*TldContext
}

func NewMsgNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MsgNodeContext {
	var p = new(MsgNodeContext)

	p.TldContext = NewEmptyTldContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TldContext))

	return p
}

func (s *MsgNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MsgNodeContext) Message() antlr.TerminalNode {
	return s.GetToken(TronWalkerMessage, 0)
}

func (s *MsgNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(TronWalkerDOWN, 0)
}

func (s *MsgNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(TronWalkerUP, 0)
}

func (s *MsgNodeContext) AllMsgBody() []IMsgBodyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IMsgBodyContext)(nil)).Elem())
	var tst = make([]IMsgBodyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IMsgBodyContext)
		}
	}

	return tst
}

func (s *MsgNodeContext) MsgBody(i int) IMsgBodyContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IMsgBodyContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IMsgBodyContext)
}

func (s *MsgNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterMsgNode(s)
	}
}

func (s *MsgNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitMsgNode(s)
	}
}

func (p *TronWalker) Tld() (localctx ITldContext) {
	localctx = NewTldContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TronWalkerRULE_tld)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(82)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case TronWalkerPackage:
		localctx = NewPkgNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(36)
			p.Match(TronWalkerPackage)
		}

	case TronWalkerImport:
		localctx = NewImportNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(37)
			p.Match(TronWalkerImport)
		}

	case TronWalkerMessage:
		localctx = NewMsgNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(38)
			p.Match(TronWalkerMessage)
		}
		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TronWalkerDOWN {
			{
				p.SetState(39)
				p.Match(TronWalkerDOWN)
			}
			p.SetState(43)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for ((_la-38)&-(0x1f+1)) == 0 && ((1<<uint((_la-38)))&((1<<(TronWalkerOption-38))|(1<<(TronWalkerMessage-38))|(1<<(TronWalkerEnum-38))|(1<<(TronWalkerOneof-38))|(1<<(TronWalkerField-38)))) != 0 {
				{
					p.SetState(40)
					p.MsgBody()
				}

				p.SetState(45)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(46)
				p.Match(TronWalkerUP)
			}

		}

	case TronWalkerEnum:
		localctx = NewEnumNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(49)
			p.Match(TronWalkerEnum)
		}
		p.SetState(58)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TronWalkerDOWN {
			{
				p.SetState(50)
				p.Match(TronWalkerDOWN)
			}
			p.SetState(54)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == TronWalkerOption || _la == TronWalkerEnumValue {
				{
					p.SetState(51)
					p.EnumBody()
				}

				p.SetState(56)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(57)
				p.Match(TronWalkerUP)
			}

		}

	case TronWalkerService:
		localctx = NewSvcNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(60)
			p.Match(TronWalkerService)
		}
		p.SetState(69)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TronWalkerDOWN {
			{
				p.SetState(61)
				p.Match(TronWalkerDOWN)
			}
			p.SetState(65)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == TronWalkerOption || _la == TronWalkerRpc {
				{
					p.SetState(62)
					p.SvcBody()
				}

				p.SetState(67)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(68)
				p.Match(TronWalkerUP)
			}

		}

	case TronWalkerExtend:
		localctx = NewExtNodeContext(p, localctx)
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(71)
			p.Match(TronWalkerExtend)
		}
		p.SetState(80)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == TronWalkerDOWN {
			{
				p.SetState(72)
				p.Match(TronWalkerDOWN)
			}
			p.SetState(76)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)

			for _la == TronWalkerOption || _la == TronWalkerField {
				{
					p.SetState(73)
					p.ExtendBody()
				}

				p.SetState(78)
				p.GetErrorHandler().Sync(p)
				_la = p.GetTokenStream().LA(1)
			}
			{
				p.SetState(79)
				p.Match(TronWalkerUP)
			}

		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IMsgBodyContext is an interface to support dynamic dispatch.
type IMsgBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsMsgBodyContext differentiates from other interfaces.
	IsMsgBodyContext()
}

type MsgBodyContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMsgBodyContext() *MsgBodyContext {
	var p = new(MsgBodyContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = TronWalkerRULE_msgBody
	return p
}

func (*MsgBodyContext) IsMsgBodyContext() {}

func NewMsgBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MsgBodyContext {
	var p = new(MsgBodyContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = TronWalkerRULE_msgBody

	return p
}

func (s *MsgBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *MsgBodyContext) CopyFrom(ctx *MsgBodyContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *MsgBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MsgBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

type MsgOptNodeContext struct {
	*MsgBodyContext
}

func NewMsgOptNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MsgOptNodeContext {
	var p = new(MsgOptNodeContext)

	p.MsgBodyContext = NewEmptyMsgBodyContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MsgBodyContext))

	return p
}

func (s *MsgOptNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MsgOptNodeContext) Option() antlr.TerminalNode {
	return s.GetToken(TronWalkerOption, 0)
}

func (s *MsgOptNodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.EnterMsgOptNode(s)
	}
}

func (s *MsgOptNodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TronWalkerListener); ok {
		listenerT.ExitMsgOptNode(s)
	}
}

type MsgOneofNodeContext struct {
	*MsgBodyContext
}

func NewMsgOneofNodeContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *MsgOneofNodeContext {
	var p = new(MsgOneofNodeContext)

	p.MsgBodyContext = NewEmptyMsgBodyContext()
	p.parser = parser
	p.CopyFrom(ctx.(*MsgBodyContext))

	return p
}

func (s *MsgOneofNodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MsgOneofNodeContext) Oneof() antlr.TerminalNode {
	return s.GetToken(TronWalkerOneof, 0)
}

func (s *MsgOneofNodeContext) DOWN() antlr.TerminalNode {
	return s.GetToken(TronWalkerDOWN, 0)
}

func (s *MsgOneofNodeContext) UP() antlr.TerminalNode {
	return s.GetToken(TronWalkerUP, 0)
}

func (s *MsgOneofNodeContext) AllOneofBody() []IOneofBodyContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IOneofBodyContext)(nil)).Elem())
	var tst = make([]IOneofBodyContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IOneofBodyContext)
		}
	}

	return tst
}
